Classic themes: Fix the scrollbar in more applications

--- a/desktop-themes/ClassicOk/gtk-3.0/gtk-widgets.css
+++ b/desktop-themes/ClassicOk/gtk-3.0/gtk-widgets.css
@@ -874,7 +874,7 @@ scrolledwindow.frame {
     padding: 0;
 }
 
-.maximized scrolledwindow.frame {
+.maximized scrolledwindow {
     border-right-width: 0px;
 }
 
